// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm component match snapshot hidden 1`] = `
"<Confirm>
  <span />
</Confirm>"
`;

exports[`Confirm component match snapshot hidden 2`] = `
"<Confirm show={false}>
  <span />
</Confirm>"
`;

exports[`Confirm component match snapshot hidden 3`] = `
"<Confirm show={false} onDismiss={[Function: onDismiss]}>
  <span />
</Confirm>"
`;

exports[`Confirm component match snapshot shown 1`] = `
"<Confirm show={true}>
  <div>
    <div className=\\"confirm-background\\" onClick={[undefined]} />
    <div className=\\"confirm-container\\">
      <span className=\\"confirm-header undefined\\">
        <span className=\\"title\\" />
        <span className=\\"close\\" onClick={[undefined]}>
          <i className=\\"fas fa-times-circle\\" style={{...}} />
        </span>
      </span>
      <span className=\\"confirm-message\\" />
      <span className=\\"confirm-buttons\\">
        <Button label=\\"Cancel\\" type=\\"normal\\" onClick={[undefined]}>
          <button className=\\"button normal\\" label=\\"Cancel\\" type=\\"normal\\" onClick={[undefined]}>
            <span>
              Cancel
            </span>
          </button>
        </Button>
        <Button label=\\"Confirm\\" type={[undefined]} onClick={[undefined]}>
          <button className=\\"button undefined\\" label=\\"Confirm\\" type={[undefined]} onClick={[undefined]}>
            <span>
              Confirm
            </span>
          </button>
        </Button>
      </span>
    </div>
  </div>
</Confirm>"
`;
